--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,2 +1,3 @@
 <h1>Welcome! This is a simple example of CI/CD project.</h1>
 <a href="/health">Check health</a>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, ratione fugit cupiditate, corrupti aliquam nemo architecto unde magni facilis excepturi ut id vel aliquid. Accusamus possimus aut placeat ipsum totam.</p>
