--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,3 +2,6 @@
 <a href="/health">Check health</a>
 <h6>Version new! 255</h6>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, ratione fugit cupiditate, corrupti aliquam nemo architecto unde magni facilis excepturi ut id vel aliquid. Accusamus possimus aut placeat ipsum totam.</p>
+<footer style="margin-top: 20px; font-size: 0.8em; color: gray;">
+    <p>Версія: {{ app_version }} | Коміт: <code>{{ commit_sha }}</code></p>
+</footer>
